<resources>
    <string name="app_name">ThreeRApp</string>
    <string name="HelpTitle">Green Global Help</string>
    <string name="Help1">How can we help you?</string>
    <string name="helpText">Enter Problem</string>
    <string name="helpBtn">Enter</string>
    <string name="help2">How to use?</string>
    <string name="help3">Common problem</string>
    <string name="companyName">Company Name: 3R APP</string>
    <string name="companyContent">Contact : 05 - 1111222</string>
    <string name="companyAddress">Address : 54, Kuala Lumpur, Malaysia</string>
    <string name="HTUse1">1.) Find a nearby recycling bin or recycling ......</string>
    <string name="HTUse2">2.) Check out the guide to sort and sort your ......</string>
    <string name="HTUse3">3.) Contact other users to arrange recycling ......</string>
    <string name="HTUse4">4.) Use the app messaging feature to communicate ......</string>
    <string name="CProblem1">1.) Unable to find recycling points: Make sure your location service are turned on.</string>
    <string name="CProblem2">2.) Not sure how to sort your items: Check the sorting guide in the app.</string>
    <string name="CProblem3">3.) Inaccurate information: Please contact the application support team and provide feedback.</string>
    <string name="SEname">Name :</string>
    <string name="SEemail">Email :</string>
    <string name="SEphone">Phone :</string>
    <string name="SuggestTitle">Suggest An Event</string>
    <string name="SEdetail">Event Detail :</string>
    <string name="SEtextET">here</string>
    <string name="SuggestBtn">Suggest Now</string>
    <string name="JoinText1">Help to refugees!!!</string>
    <string name="JoinText2">Date: 1/8/23 - 30/8/23</string>
    <string name="JoinText3">link: www.woridvision.com.my./cn/what-we-do/emergency-relief</string>
    <string name="JoinText4">We will help in ....................................................Hope you all Join it!!!</string>
    <string name="JoinBtn">Join Now</string>
    <string name="ActivitySearchText">Search</string>
    <string name="ActivityText1">Current Event</string>
    <string name="ActivityText2">Comming Soon</string>
    <string name="point1">Point : 50</string>
    <string name="point2">Point : -</string>
    <string name="ActivityText3">Singapore National Day Special Event</string>
    <string name="ActivityText4">Date: 9/8/23 only</string>
    <string name="ActivityText5">Time: 1 p.m. - 10 p.m.</string>
    <string name="ActivityText6">Detail: reward furniture and ....</string>
    <string name="ActivityText7">Independence Day Activity</string>
    <string name="ActivityText8">Date: 31/8/2023</string>
    <string name="ActivityText9">Trash Picking</string>
    <string name="ActivityText10">Date: 1/9/2023</string>
    <string name="ActivityText11">Time: 12 p.m.</string>
    <string name="ActivityText12">不好意思走错场这里好像不是 Entrepreneurship</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GoBack">Back</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="Point">Points</string>
    <string name="Edit">Edit</string>
    <string name="Clear">Clear</string>
    <string name="ActivityList">Activity List</string>
    <string name="Add">Add</string>
    <string name="SponsorshipName">Sponsorship Name</string>
    <string name="LegalEntity">Legal Entity</string>
    <string name="Package">Package</string>
    <string name="Contact">Contact</string>
    <string name="Email">Email</string>
    <string name="SponsorshipList">Sponsorship List</string>
    <string name="UserName">User Name</string>
    <string name="UserEmail">User Email</string>
    <string name="UserGender">Gender</string>
    <string name="UserList">User List</string>
</resources>