<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/sponsorshipEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300dp"
                android:layout_weight="1"
                android:contentDescription="@string/Edit"
                app:srcCompat="@drawable/baseline_edit_24"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/sponsorshipClearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/Clear"
                app:srcCompat="@drawable/baseline_cancel_24"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/AdminSponsorshipName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SponsorshipName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/AdminSponsorshipLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/LegalEntity"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/AdminSponsorshipPackage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Package"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/AdminSponsorshipContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Contact"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/AdminSponsorshipEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Email"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>